--- a/README.tex
+++ b/README.tex
@@ -1,4 +1,4 @@
-% Created 2023-08-30 水 13:23
+% Created 2023-08-30 水 13:58
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt]{article}
 \usepackage[utf8]{inputenc}
@@ -55,7 +55,7 @@
 \tableofcontents
 \pagebreak
 \section{Introduction \& motivation}
-\label{sec:org51196b3}
+\label{sec:orgf3ff573}
 This guide will present how to setup and use Xilinx's KRIA board, in particular
 for running ROS on a host Ubuntu system, as well as for deploying
 micro-ROS as a firmware on the MCU part of this board's chip.
@@ -66,7 +66,7 @@ a Linux distribution, as well as another ARM core, real-time enabled,
 capable to run a RTOS.
 
 \section{Boot firmware}
-\label{sec:orgca91945}
+\label{sec:org9263c65}
 The goal for the Linux side of the deployment is to
 have the latest LTS version of Ubuntu up and running.
 
@@ -77,7 +77,7 @@ The procedure is available in \href{https://docs.xilinx.com/r/en-US/ug1089-kv260
 but I will present it step by step here.
 
 \subsection{Getting the new firmware}
-\label{sec:org8f6ba68}
+\label{sec:orgbb36b80}
 A 2022 version of the board firmware is required in order to run the latest
 version of Ubuntu properly.
 
@@ -91,7 +91,7 @@ wget https://www.xilinx.com/member/forms/download/\
 
 
 \subsection{Reaching the board recovery tool}
-\label{sec:org10f2aaf}
+\label{sec:org43dd7bd}
 Now the firmware \texttt{.bin} image is available, it is possible to update it using the
 boards recovery tool. Here are the steps that must be taken in order to reach
 this tool and update the board:
@@ -106,24 +106,24 @@ range, except the specific \texttt{192.168.0.111}, which will be used by the
 board.
 \item Using a web browser on your host machine, access
 \texttt{http://192.168.0.111}. Thou shall now see the interface, as visible on
-the figure \ref{fig:orgeca2352} below.
+the figure \ref{fig:org28e1e08} below.
 \end{itemize}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=1\textwidth]{img/recovery.png}
-\caption{\label{fig:orgeca2352}The recovery tool for the board, access from Firefox. We can see board information at the center, and the tools to upload the firmware at the bottom of the page.}
+\caption{\label{fig:org28e1e08}The recovery tool for the board, access from Firefox. We can see board information at the center, and the tools to upload the firmware at the bottom of the page.}
 \end{figure}
 
 \subsection{Updating the boot firmware}
-\label{sec:orgb64b203}
+\label{sec:orgfe64c7d}
 From this "recovery" page, it is possible to upload the \texttt{.bin} file downloaded previously onto
 the board using the "Recover Image" section at the bottom right of the page.
 
 The board can be re-booted afterwards.
 
 \section{Installing Linux}
-\label{sec:org14e81c2}
+\label{sec:org001bd30}
 Withe the boot firmware being up-to-date, we can proceed to install a Linux distribution
 on our Kria board. The step needed to archive a full installation of Ubuntu LTS 22.04
 will be presented in this section\footnote{The same procedure should work for other versions of Ubuntu, as long as they
@@ -131,7 +131,7 @@ support the Kria board, but for this report and project, only the LTS 22.04 was 
 (as of 2023-08-30).}.
 
 \subsection{Preparing and booting a Ubuntu 22.04 media}
-\label{sec:org36952c3}
+\label{sec:org972333f}
 An \href{https://ubuntu.com/download/amd-xilinx}{official Ubuntu image} exists and is
 provided by Xilinx, allowing the OS installation to be quick and
 straightforward.
@@ -175,12 +175,12 @@ host# ssh ubuntu@192.168.4.11
 \end{minted}
 
 \subsection{Network and admin setups}
-\label{sec:org8dad69b}
+\label{sec:org973bebc}
 This section presents a variety of extra convenience configurations
 that can be used when setting-up the Kria board.
 
 \subsubsection{Proxy and DNS}
-\label{sec:org7a2fab6}
+\label{sec:orge08be9d}
 An issue that can occur when connecting the board to the internet is the
 conflicting situation with the university proxy.
 Indeed, as the network at Nanzan University requires to go through a proxy,
@@ -216,7 +216,7 @@ echo "export http_proxy=\""$https_proxy"\"" >> ~/.bashrc \
 Eventually the board can be rebooted in order for the setup to get applied cleanly.
 
 \subsubsection{\texttt{root} password}
-\label{sec:orged9768d}
+\label{sec:org381b828}
 \begin{tcolorbox}[colback=orange!5!white,colframe=orange!75!black]
 \textbf{WARNING}: Depending on your use-case, the setup presented in this
 subsection can be a critical security breach as it remove the need for a root
@@ -252,7 +252,7 @@ sudo reboot now
 
 
 \subsubsection{Static IP address}
-\label{sec:org5f9575b}
+\label{sec:org13a647c}
 A static IP can be set by writing the following
 configuration into your \texttt{netplan} configuration file.
 
@@ -288,15 +288,16 @@ sudo netplan apply
 \end{minted}
 
 \subsubsection{Purging \texttt{snap}}
-\label{sec:org942ade3}
+\label{sec:org5372ffb}
 As the desktop-specific software are not used at all in the case
 of our project, there are some packages that can be purges in order for the
 system to become more lightweight.
 
 In particular, the main issue with Ubuntu systems is the forced integration of
 Snap packages. Here are the command to use in order to remove all of that.
-These steps take a lot of time and need to be executed in that specific order\footnote{The \texttt{snap} package depends on each other. Thus dependencies
-cannot be remove before the package(s) that depends on them.},
+These steps take a lot of time and need to be executed in that specific order\footnote{The \texttt{snap} packages depends on each others. Dependencies
+cannot be remove before the package(s) that depends on them,
+thus the specific delete order.},
 but the system fan runs sensibly slower without all of this stuff:
 
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
@@ -325,7 +326,7 @@ systemctl list-units | grep snapd
 \end{minted}
 
 \subsubsection{Other unused heavy packages}
-\label{sec:org7fac80b}
+\label{sec:orgb6ebd5d}
 Some other pieces of software can safely be removed since the desktop is
 not to be used:
 
@@ -339,7 +340,7 @@ sudo reboot now
 \end{minted}
 
 \section{Enabling \texttt{remoteproc}}
-\label{sec:orgc220b2b}
+\label{sec:org27bd8bf}
 One of the advantage of this Kria board, as cited previously, is the presence of
 multiple types of core (APU, MCU, FPGA) on the same chip.
 
@@ -361,7 +362,7 @@ will present how to setup and use as an example firmware that utilizes the
 and communicate with the real-time firmware using the RPMsg system.
 
 \subsection{Device-Tree Overlay patching}
-\label{sec:org920154d}
+\label{sec:org95bbdf4}
 The communication system and interaction from the Linux side towards the real-time capable core
 is not enabled by default within the Ubuntu image provided by Xilinx.
 
@@ -377,7 +378,7 @@ sudo dtc /sys/firmware/fdt 2> /dev/null > system.dts
 
 Then, a custom-made patch file can be downloaded and applied.
 This file is available at the URL visible in the command below
-but also in this report appendix \ref{sec:org7514221}.
+but also in this report appendix \ref{sec:org10badf1}.
 
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
 wget https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/\
@@ -419,7 +420,7 @@ If it is the case, it means that the patch was successful and  that the remote p
 ready to be used!
 
 \section{Building an example RPMsg real-time firmware}
-\label{sec:org31558ed}
+\label{sec:orge794646}
 As visible on the official \href{https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/1837006921/OpenAMP+Base+Hardware+Configurations\\\#Build-RPU-firmware}{Xilinx documentation about building a demo firmware},
 this section will present the required steps for building a new firmware for the R5F
 core of our Kria board.
@@ -428,7 +429,7 @@ The goal here is to have a demonstration firmware running,
 able to use the RPMsg system to communicate with the Linux APU.
 
 \subsection{Setting up the IDE}
-\label{sec:org6040e25}
+\label{sec:orgff332fd}
 Xilinx's Vitis IDE is the recommended tool used to build software for the Xilinx boards.
 It also include the tools to interact with the FPGA part, making the whole
 software very large (around 200GB of disk usage).
@@ -450,7 +451,7 @@ This guide will present a setup procedure that supposedly works for all distribu
 LTS from Ubuntu. For other Linux distributions or operating system, please refer to the official documentation.
 
 \subsubsection{Dependencies \& installation}
-\label{sec:org1722b4e}
+\label{sec:orgfb1691b}
 Some packages are required to be installed on the host system
 in order for the installation process to happen successfully:
 
@@ -490,7 +491,7 @@ so your schedule should be arranged accordingly.
 \end{tcolorbox}
 
 \subsubsection{Platform configuration file generation}
-\label{sec:org5a7ddc9}
+\label{sec:org69a9825}
 In order to have the libraries and configurations in the IDE ready to be used for our board,
 we need to obtain some configuration files that are specific for the Kria KV260,
 as presented in the \href{https://xilinx.github.io/kria-apps-docs/kv260/2022.1/build/html/docs/build\_vitis\_platform.html?highlight=xsa}{Xilinx guide for Kria and Vitis}.
@@ -523,7 +524,7 @@ make platform PLATFORM=k26_base_starter_kit
 
 
 \subsection{Setting up and building a new project for the Kria board}
-\label{sec:org6de6749}
+\label{sec:org9a0b796}
 With the platform configuration files available, we can now use the IDE to generate a
 new project for our board. The whole process will be described with screen captures and
 captions.
@@ -531,43 +532,43 @@ captions.
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.5\textwidth]{./img/vitis_new/project1.png}
-\caption{\label{fig:org5f5f985}We are starting with creating a "New Application Project" You should be greeted with this wizard window. Next.}
+\caption{\label{fig:orgfe8be13}We are starting with creating a "New Application Project" You should be greeted with this wizard window. Next.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.5\textwidth]{./img/vitis_new/project2.png}
-\caption{\label{fig:orge81cf14}For the platform, we need to get our build Kria configuration. In the "Create a new platform" tab, click the "Browse\ldots{}" button.}
+\caption{\label{fig:orgab32dad}For the platform, we need to get our build Kria configuration. In the "Create a new platform" tab, click the "Browse\ldots{}" button.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project3.png}
-\caption{\label{fig:org307a91f}In the file explorer, we should navigate in the "k26" directory, where the configuration file was build. From here we are looking for a ".xsa" file, located in a "hw" directory, as visible.}
+\caption{\label{fig:org23f3553}In the file explorer, we should navigate in the "k26" directory, where the configuration file was build. From here we are looking for a ".xsa" file, located in a "hw" directory, as visible.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project4.png}
-\caption{\label{fig:orgc964b34}With the configuration file loaded, we can now select a name for our platform, but most importantly, we have to select the "psu Cortex5 0" core as a target. The other, Cortex 53 is the APU running Linux.}
+\caption{\label{fig:orgf8d9b51}With the configuration file loaded, we can now select a name for our platform, but most importantly, we have to select the "psu Cortex5 0" core as a target. The other, Cortex 53 is the APU running Linux.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project5.png}
-\caption{\label{fig:orgdc03976}In this next window, we can give a name to our firmware project. It is also critical here to select the core we want to build for. Once again, we want to use the "psu cortex5 0".}
+\caption{\label{fig:org7602e8a}In this next window, we can give a name to our firmware project. It is also critical here to select the core we want to build for. Once again, we want to use the "psu cortex5 0".}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project6.png}
-\caption{\label{fig:org0df830d}Here, we want to select "freertos10 xilinx" as our Operating System. The rest can remain unchanged.}
+\caption{\label{fig:org823f389}Here, we want to select "freertos10 xilinx" as our Operating System. The rest can remain unchanged.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project7.png}
-\caption{\label{fig:orgfc203fd}Finally, we can select the demonstration template we are going to use; here we go with "OpenAMP echo-test" since we want to have some simple try of the RPMsg system. Finish.}
+\caption{\label{fig:org71e4b40}Finally, we can select the demonstration template we are going to use; here we go with "OpenAMP echo-test" since we want to have some simple try of the RPMsg system. Finish.}
 \end{figure}
 
 \pagebreak
@@ -583,12 +584,12 @@ psu_r5_tcm_ram_1_S_AXI_BASEADDR    0x00020000
 \end{minted}
 
 Once your example project is built and you have a \texttt{.elf} file available, you can
-jump directly to the \ref{sec:org12684a2} section to see how to deploy and use your firmware.
+jump directly to the \ref{sec:org26aa7cf} section to see how to deploy and use your firmware.
 
 The section in between will present setup specifically needed for micro-ROS.
 
 \subsection{Enabling the Stream Buffer system}
-\label{sec:org971efc7}
+\label{sec:org0a8eb64}
 This is a subpart in the general configuration in the project related to some specific
 functions for FreeRTOS threads messaging system, however, this point in particular
 created so much pain I needed to include in early in this guide for not to forget about it
@@ -596,12 +597,12 @@ and keeping a clear track on how to enable this setting.
 
 Indeed, two settings need to be enabled in order to be able to call
 functions such as \texttt{xMessageBufferCreate}, useful when working with tasks
-in FreeRTOS, as visible in the figure \ref{fig:orge9a8bee} below:
+in FreeRTOS, as visible in the figure \ref{fig:org0e3ea36} below:
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.8\textwidth]{./img/streambuffer.png}
-\caption{\label{fig:orge9a8bee}Enabling Stream Buffer in the Vitis IDE setting: this is a setting that can be found in the "platform.spr" element of your project (the platform, not the firmware project itself). From that file, you can access the settings with the button "Modify BSP Settings", and then as visible, in the tab \texttt{freertos10\_xilinx}, it is needed to toggle here the \texttt{stream\_buffer} setting in the \texttt{kernel\_features}, from the default "false" to "true".}
+\caption{\label{fig:org0e3ea36}Enabling Stream Buffer in the Vitis IDE setting: this is a setting that can be found in the "platform.spr" element of your project (the platform, not the firmware project itself). From that file, you can access the settings with the button "Modify BSP Settings", and then as visible, in the tab \texttt{freertos10\_xilinx}, it is needed to toggle here the \texttt{stream\_buffer} setting in the \texttt{kernel\_features}, from the default "false" to "true".}
 \end{figure}
 
 \pagebreak
@@ -614,7 +615,7 @@ before the \texttt{\#include "FreeRTOS.h"} in order to override the setting from
 
 \pagebreak
 \section{RPMsg \texttt{echo\_test} software}
-\label{sec:orgfac43fc}
+\label{sec:org5ec234a}
 In order to test the deployment of the firmware on the R5F side, and in particular
 to test the RPMsg function, we need some program on the Linux side of the Kria
 board to "talk" with the real-time side.
@@ -640,7 +641,7 @@ Once this is done, it it possible to run the test program from the Kria board's 
 by running the \texttt{echo\_test} command.
 
 \section{Building micro-ROS as a static library}
-\label{sec:org71cbc53}
+\label{sec:org3db0b54}
 In this section, the goal is to build the micro-ROS library in order to be
 able to integrate it's functions into our Cortex R5F firmware.
 
@@ -710,8 +711,8 @@ ros2 run micro_ros_setup create_firmware_ws.sh generate_lib
 
 From that point, we will need some extra configuration files for our Cortex R5F.
 
-Both configuration files\footnote{Both files are also visible in the appendixes \ref{sec:orgad64dbb}
-and \ref{sec:org4e01559} the end of this report.\}} will be downloaded from my repository;
+Both configuration files\footnote{Both files are also visible in the appendixes \ref{sec:orgb794fe7}
+and \ref{sec:org854615e} the end of this report.\}} will be downloaded from my repository;
 we also are going to copy the cross-compiler into the microros workspace,
 then we can build the library with the following ros2 command:
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
@@ -730,7 +731,7 @@ custom_r5f_colcon.meta
 \end{minted}
 
 \section{Including micro-ROS to the real-time firmware}
-\label{sec:org2e39386}
+\label{sec:org753d18b}
 Now we have a Vitis demonstration project available and the \texttt{libmicroros} static library
 available, we can combine both by including this library into our Kria project.
 
@@ -749,19 +750,19 @@ docker cp ros_build:/microros_ws/firmware/build/include \
 \end{minted}
 
 Many parameters are available to be set up in the IDE for the compilation toolchain, but
-the figures \ref{fig:org2b156b5} and \ref{fig:orga653282} below will show you a setup that worked to have the IDE
+the figures \ref{fig:org1d5e775} and \ref{fig:org3fa6856} below will show you a setup that worked to have the IDE
 to recognize the include files and to be able to use them for compiling the firmware.
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/include.png}
-\caption{\label{fig:org2b156b5}Firstly, in the "C/C++ Build" settings of your firmware project, under the "Settings" menu, you should find the gcc compiler "Directories". In here you should add the "include" directory of your library. Be careful however, if your include files are in a second layer of directory (as it is the case for libmicroros) you will need to include each sub-directory individually, as visible in this figure.}
+\caption{\label{fig:org1d5e775}Firstly, in the "C/C++ Build" settings of your firmware project, under the "Settings" menu, you should find the gcc compiler "Directories". In here you should add the "include" directory of your library. Be careful however, if your include files are in a second layer of directory (as it is the case for libmicroros) you will need to include each sub-directory individually, as visible in this figure.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/include2.png}
-\caption{\label{fig:orga653282}Secondly, in the gcc linkers "Libraries", you can add the top level directory of your library. In our case, it is the directory that contains both the "include" directory added earlier, and also the "libmicroros.a" file.}
+\caption{\label{fig:org3fa6856}Secondly, in the gcc linkers "Libraries", you can add the top level directory of your library. In our case, it is the directory that contains both the "include" directory added earlier, and also the "libmicroros.a" file.}
 \end{figure}
 
 \pagebreak
@@ -790,7 +791,7 @@ scp /home/sunoc/workspace/rpmsg_pingpong_microros_lib/\
 \end{minted}
 
 \section{micro-ROS adaptation for the firmware}
-\label{sec:org8bb5c53}
+\label{sec:orgc6c917c}
 Beyond the inclusion of the library itself, actually using the micro-ROS system
 within an external project require more than just importing the needed
 functions.
@@ -800,7 +801,7 @@ the general ROS2 network, you would face issues with four key aspects.
 These are presented in the following dedicated sub-sections.
 
 \subsection{Time functions}
-\label{sec:org569bf72}
+\label{sec:org2a99f9c}
 As micro-ROS can be used on a variety of board, it does not understand by itself
 what time functions are meant to be used.
 
@@ -812,20 +813,20 @@ function calls.
 In particular for this part, the \texttt{clock\_gettime} function is key, and could
 simply be implemented with some FreeRTOS time functions.
 
-The end result for these implementation are visible in the appendix \ref{sec:org31b7fd1},
+The end result for these implementation are visible in the appendix \ref{sec:orgd85af09},
 and can be reused as-if for the Kria board setups.
 
 \subsection{Memory allocators}
-\label{sec:orgdd6d041}
+\label{sec:orgff82351}
 Similarly to the time function, it is required to re-implement some form of memory allocating
 functions in order for the library to be able to work with such functions in a formalized way.
 
 As for now, the current version of the allocator function can be seen in the
-appendix \ref{sec:org7e68c7f}, but the current setup is not
+appendix \ref{sec:org3e2655b}, but the current setup is not
 completely "clean", some further formatting, test and modification will be needed.
 
 \subsection{Custom transport layer}
-\label{sec:org4e51ff9}
+\label{sec:orgeb58342}
 This part is the key translation layer that needs to happen in order for the
 DDS system from the micro-ROS library to be using the communication channel we
 want it to.
@@ -840,7 +841,7 @@ system, waiting on the service interrupt routine to be trigger by an incoming me
 This situation meant that we count not simple translate the communication layers from one
 to another: a non-blocking polling and buffer system needed to be put into places.
 The proposed solution that was implemented and that is currently being tested
-is showed and detailed in the figure \ref{fig:org12fce29} below.
+is showed and detailed in the figure \ref{fig:org2e6a79b} below.
 
 As this part of the firmware was developed and tested on it's own, the overall
 implementation within the "real" ping-pong application is still a work in progress,
@@ -849,7 +850,7 @@ and further modifications are expected when the system will be more thoroughly t
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=1\textwidth]{./img/rpmsg_fw_tasks.png}
-\caption{\label{fig:org12fce29}Two tasks are being run concurrently in order to manage the communication situation, with binary semaphore-based lock-unlock system.\\[0pt]
+\caption{\label{fig:org2e6a79b}Two tasks are being run concurrently in order to manage the communication situation, with binary semaphore-based lock-unlock system.\\[0pt]
  The role of the micro-ROS task (right) is to make the four functions ("open", "read", "write" and "close")  available and running the actual software function. In this example, polling the read function and writing back when something is receive (ping-pong function). The use of the \texttt{rpmsg\_send()} function is done directly from the micro-ROS task, bypassing the RPMsg task in this situation.\\[0pt]
  In the libmicroros implementation currently being developed, the micro-ROS task holds all the DDS and micro-ROS system, including the mentioned allocators function.\\[0pt]
  The RPMsg task (center) is used to firstly set the RPMsg communication with the Linux side (left), then it stays locked until the ISR (interrupt service routine) is triggered by an incoming message. The message is then passed to the micro-ROS task using a buffer.\\[0pt]
@@ -858,7 +859,7 @@ and further modifications are expected when the system will be more thoroughly t
 
 \pagebreak
 \section{Loading the firmware}
-\label{sec:org12684a2}
+\label{sec:org26aa7cf}
 Having a version of our \texttt{.elf} firmware (with or without the included
 micro-ROS library) built and loaded onto our Kria's Linux, we want to load and run it
 on the Cortex micro-controller side.
@@ -876,7 +877,7 @@ from the Linux user-space\footnote{In this sequence, we are entering a root shel
 also be archived by putting the commands in a script to be executed with \texttt{sudo}.}, to test a basic RPMsg setup\footnote{It is also important to note that the \texttt{echo\_test} part is specific for the
 RPMsg base demonstration firmware. It is not to be used for other firmware.
 The instruction to build and use this particular program on the Kria Linux
-is visible in the section \ref{sec:orgfac43fc}.}:
+is visible in the section \ref{sec:org5ec234a}.}:
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
 sudo -s
 mv image_echo_test /lib/firmware
@@ -900,43 +901,228 @@ or the new binary itself is impossible to run.
 the RPMsg system worked successfully.
 \end{itemize}
 
+
 \section{Running a ROS2 node}
-\label{sec:org2c7a3ee}
+\label{sec:org2edb227}
+This section as well as the next one are rather "separated" from the rest of the report, as
+they are focused on the ROS2 system being used on the Kria board.
 
-\subsection{On the host Linux}
-\label{sec:orged040f3}
+In this first section, the installation of ROS2 as a system will be presented, with
+two different ways of approaching the problem.
 
-\subsection{In a container}
-\label{sec:orgaea48a8}
+\subsection{On the host Linux ("bare-metal")}
+\label{sec:org9c84e52}
+Since an Ubuntu distribution is installed on the board, the installation of ROS2
+can be done\footnote{As always, this configuration was tested solely on Ubuntu LTS 22.04,
+with the ROS2 versions \texttt{Humble} and then \texttt{Iron} being deployed.
+Other combination of versions should work as well, but they are not
+tested for this guide. In case of doubt or problem, please refer to the official documentation.} in a standard way, using the repository.
+
+An \href{https://docs.ros.org/en/humble/Installation/Ubuntu-Install-Debians.html}{official documentation} is provided with ROS2 themselves with a step-by-step guide on how to install
+ROS2 on a Ubuntu system\{\}.
+We will be following this guide here\footnote{The \texttt{curl} command from the guide does not work through the school proxy,
+but the command \texttt{wget} used instead does work. The key is then moved to the correct spot with \texttt{mv}.}.
+
+Firstly, we need to update the locals, enable the universe Ubuntu repository,
+get the key and add the repository for ROS2. This can be done as follow:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+locale  # check for UTF-8
+sudo apt update && sudo apt install -y locales
+sudo locale-gen en_US en_US.UTF-8
+sudo update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
+export LANG=en_US.UTF-8
+locale  # verify settings
+
+sudo apt install -y software-properties-common
+sudo add-apt-repository universe
+sudo apt update && sudo apt install -y curl wget
+
+wget https://raw.githubusercontent.com/ros/rosdistro/master/ros.key
+sudo mv ros.key /usr/share/keyrings/ros-archive-keyring.gpg
+\end{minted}
+
+Then, a thicc one-liner is available to add the ROS2 repository to our system:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+echo "deb [arch=$(dpkg --print-architecture) \
+signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] \
+http://packages.ros.org/ros2/ubuntu $(. \
+/etc/os-release && echo $UBUNTU_CODENAME) main" | \
+sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
+\end{minted}
+
+It is then possible to install ROS2\footnote{This command installs a complete "desktop" version of ROS2, containing many
+useful package for our project.
+If space is a constraint, different, less complete packages can be install.
+Please refer to the official documentation about it.} as follow:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+sudo apt update
+sudo apt upgrade -y
+sudo apt install -y ros-humble-desktop \
+     ros-humble-ros-base \
+     python3-argcomplete \
+     ros-dev-tools
+\end{minted}
+
+Once installed, it is possible to test the system with a provided example.
+You need to open two terminals and log wish SSH onto the board, then running
+respectively:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+source /opt/ros/humble/setup.bash
+ros2 run demo_nodes_cpp talker
+\end{minted}
+
+And then:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+source /opt/ros/humble/setup.bash
+ros2 run demo_nodes_py listener
+\end{minted}
+
+You should be able to see the first terminal sending "Hello world" messages,
+and the second one receiving then.
+
+\subsection{In a container (Docker)}
+\label{sec:org1c09e74}
+As containers are used to test and build micro-ROS configurations,
+running ROS2 in a Docker  is a great way to have a reproducible configuration
+of you system.
+
+This part of the guide will present how to install Docker on the
+Kria board and then how to use it to deploy the latest version of ROS2.
+
+\subsubsection{Installing Docker on Ubuntu}
+\label{sec:orgdadc2e8}
+It is possible to have a version of Docker installed simply by using the available repository,
+but since we are on Ubuntu, a PPA is available from Docker in order to have the most up-to-date version.
+
+Following \href{https://docs.docker.com/engine/install/ubuntu/\#install-using-the-repository}{the official documentation}, the following steps can be taken to install the latest version of
+Docker on a Ubuntu system. The last command is meant to test the install.
+If everything went smoothly, you should see something similar to what is presented
+in the figure \ref{fig:orgca72d65} below, after the commands:
+
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+sudo apt-get update
+sudo apt-get install ca-certificates curl sudo
+gnupg install -m 0755 -d /etc/apt/keyrings
+curl -fsSL https://download.docker.com/linux/ubuntu/gpg | \
+    sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+
+sudo chmod a+r /etc/apt/keyrings/docker.gpg
+
+echo \
+    "deb [arch="$(dpkg --print-architecture)" \
+  signed-by=/etc/apt/keyrings/docker.gpg] \
+  https://download.docker.com/linux/ubuntu \
+  "$(. /etc/os-release && \
+         echo "$VERSION_CODENAME")" stable" | \
+    sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+sudo apt-get update
+sudo apt-get install docker-ce docker-ce-cli \
+     containerd.io docker-buildx-plugin docker-compose-plugin
+sudo usermod -aG docker $USER
+newgrp docker
+
+docker run hello-world
+\end{minted}
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=.7\textwidth]{./img/hello-docker.png}
+\caption{\label{fig:orgca72d65}The return of a successful run of the \texttt{hello world} test Docker container.}
+\end{figure}
+
+
+\subsubsection{Running a ROS2 container}
+\label{sec:orge2a959e}
+The following commands will pull a ROS container, version \texttt{iron}, and name it \texttt{ros\_build}.
+
+A key part for having access to the interfaces (serial) is the mapping of the whole \texttt{/dev}
+range of devices from the host machine to the internal \texttt{/dev} of the container\footnote{This is an example and this situation can become a security issue. It would be a better practice
+in a production environment to map only the devices that are actually in use.}.
+With the second command, we can execute \texttt{bash} as a way to open a terminal to the "inside" the container:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+docker run -d --name ros_agent -it --net=host -v \
+       /dev:/dev --privileged ros:iron
+docker exec -it ros_agent bash
+\end{minted}
+
+From there, it becomes possible to simply use ROS2 as you would for a bare-metal install,
+and as presented in the section \ref{sec:org9c84e52} above:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+source /opt/ros/$ROS_DISTRO/setup.bash
+
+# Create a workspace and download the micro-ROS tools
+mkdir microros_ws
+cd microros_ws
+git clone -b $ROS_DISTRO https://github.com/micro-ROS/\
+    micro_ros_setup.git src/micro_ros_setup
+
+# Update dependencies using rosdep
+sudo apt update && rosdep update
+rosdep install --from-paths src --ignore-src -y
+
+# Install pip
+sudo apt-get install python3-pip
+
+# Build micro-ROS tools and source them
+colcon build
+source install/local_setup.bash
+
+# Download micro-ROS-Agent packages
+source install/local_setup.bash
+ros2 run micro_ros_setup create_agent_ws.sh
+
+# Build step
+ros2 run micro_ros_setup build_agent.sh
+source install/local_setup.bash
+
+# Run a micro-ROS agent
+ros2 run micro_ros_agent micro_ros_agent serial \
+     --dev /dev/ttyUSB1
+\end{minted}
+
+Then once again in a similar way to the bare-metal deployment,  it is possible to run a demonstration
+the ping-pong topic communication from a different shell\footnote{You need to be careful to have you shell in the "correct" space: these command need to be run inside
+the container in which the previous setup were install, not on the host running the container system.
+The hostname should help you to figure out where you are.}:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+source /opt/ros/$ROS_DISTRO/setup.bash
+
+# Subscribe to micro-ROS ping topic
+ros2 topic echo /microROS/ping
+\end{minted}
+
 
 \section{micro-ROS agent}
-\label{sec:org9e9171e}
+\label{sec:orgb549dcb}
+
+
 
 \pagebreak
 \appendix
 \section{DTO patch}
-\label{sec:org7514221}
+\label{sec:org10badf1}
 This file is available in this repository: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/system.patch}{system.patch}
 \inputminted[linenos, frame=single]{diff}{./src/system.patch}
 
 \pagebreak
 \section{Custom toolchain CMake settings}
-\label{sec:orgad64dbb}
+\label{sec:orgb794fe7}
 This file is available in this repository: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/custom\_r5f\_toolchain.cmake}{custom r5f toolchain.cmake}
 \inputminted[linenos, frame=single]{cmake}{./src/custom_r5f_toolchain.cmake}
 
 \pagebreak
 \section{Custom Colcon meta settings}
-\label{sec:org4e01559}
+\label{sec:org854615e}
 This file is available in this repository: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/custom\_r5f\_colcon.meta}{custom r5f colcon.meta}
 \inputminted[linenos, frame=single]{yaml}{./src/custom_r5f_colcon.meta}
 
 \pagebreak
 \section{Firmware time functions}
-\label{sec:org31b7fd1}
+\label{sec:orgd85af09}
 
 \subsection{main}
-\label{sec:orgd4645e5}
+\label{sec:orgc5199a0}
 This file is available in this repository: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/clock.c}{clock.c}
 but a potentially more up-to-date version is visible
 directly at the \texttt{libmicroros\_kv260} repository: \href{https://gitlab.com/sunoc/libmicroros\_kv260/-/blob/4867e762f66af7b4647232eb4c0a31106db66e13/src/clock.c}{clock.c}
@@ -944,7 +1130,7 @@ directly at the \texttt{libmicroros\_kv260} repository: \href{https://gitlab.com
 \inputminted[linenos, frame=single]{c}{./src/clock.c}
 
 \subsection{header file}
-\label{sec:org8ec4bae}
+\label{sec:orga0cb6dd}
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{c}
 /**< Microseconds per second. */
 #define MICROSECONDS_PER_SECOND    ( 1000000LL )  
@@ -957,10 +1143,10 @@ directly at the \texttt{libmicroros\_kv260} repository: \href{https://gitlab.com
 
 \pagebreak
 \section{Firmware memory allocation functions}
-\label{sec:org7e68c7f}
+\label{sec:org3e2655b}
 
 \subsection{main}
-\label{sec:org7a74bc0}
+\label{sec:orgcd567d5}
 This file is available in this repository: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/allocators.c}{allocators.c}
 but a potentially more up-to-date version is visible
 directly at the \texttt{libmicroros\_kv260} repository: \href{https://gitlab.com/sunoc/libmicroros\_kv260/-/blob/4867e762f66af7b4647232eb4c0a31106db66e13/src/allocators.c}{allocators.c}
@@ -968,7 +1154,7 @@ directly at the \texttt{libmicroros\_kv260} repository: \href{https://gitlab.com
 \inputminted[linenos, frame=single]{c}{./src/allocators.c}
 
 \subsection{header file}
-\label{sec:org0a23a3b}
+\label{sec:orgd32e579}
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{c}
 #ifndef _ALLOCATORS_H_
 #define _ALLOCATORS_H_
