--- a/instructions.tex
+++ b/instructions.tex
@@ -1130,72 +1130,86 @@ Running the XRCE-DDS container from eProsima directly:
 \end{tcolorbox}
 
 
-% ==============================================================================
-\pagebreak
-\appendix
-% ------------------------------------------------------------------------------
-\section{DTO patch file}
-\label{sec:DTO patch file}
-\inputminted[linenos]{diff}{./src/system.patch}
-
-% ------------------------------------------------------------------------------
-\pagebreak
-\section{Custom toolchain CMake settings}
-\label{sec:toolchainsettings}
-\inputminted[linenos]{cmake}{./src/custom_r5f_toolchain.cmake}
-
-% ------------------------------------------------------------------------------
-\pagebreak
-\section{Custom Colcon meta settings}
-\label{sec:colconsettings}
-\inputminted[linenos]{yaml}{./src/custom_r5f_colcon.meta}
-
-% ------------------------------------------------------------------------------
-\pagebreak
-\section{Firmware time functions}
-\label{sec:timefunctions}
-
-\subsection{Main function}
-\inputminted[linenos]{c}{./src/clock.c}
-
-\subsection{Header file with definitions}
-\begin{minted}[linenos]{c}
-  /**< Microseconds per second. */
-  #define MICROSECONDS_PER_SECOND    ( 1000000LL )  
-  /**< Nanoseconds per second. */
-  #define NANOSECONDS_PER_SECOND     ( 1000000000LL ) 
-  /**< Nanoseconds per FreeRTOS tick. */  
-  #define NANOSECONDS_PER_TICK       ( NANOSECONDS_PER_SECOND / configTICK_RATE_HZ ) 
-\end{minted}
+Code from Honda sensei for building an eprosia agent
+\begin{tcolorbox}
+  \begin{minted}{sh}
+    git clone https://github.com/eProsima/Micro-XRCE-DDS-Agent.git
+    cd Micro-XRCE-DDS-Agent
+    mkdir build && cd build
+    cmake -DTHIRDPARTY=ON ..
+    make
+    sudo make install
+    sudo ldconfig /usr/local/lib/
+  \end{minted}
+\end{tcolorbox}
 
 
-% ------------------------------------------------------------------------------
-\pagebreak
-\section{Firmware memory allocation functions}
-\label{sec:allocfunctions}
+% % ==============================================================================
+% \pagebreak
+% \appendix
+% % ------------------------------------------------------------------------------
+% \section{DTO patch file}
+% \label{sec:DTO patch file}
+% \inputminted[linenos]{diff}{./src/system.patch}
 
-\subsection{Main function}
-\inputminted[linenos]{c}{./src/allocators.c}
+% % ------------------------------------------------------------------------------
+% \pagebreak
+% \section{Custom toolchain CMake settings}
+% \label{sec:toolchainsettings}
+% \inputminted[linenos]{cmake}{./src/custom_r5f_toolchain.cmake}
 
-\subsection{Header file with definitions}
-\begin{minted}[linenos]{c}
-#ifndef _ALLOCATORS_H_
-#define _ALLOCATORS_H_
+% % ------------------------------------------------------------------------------
+% \pagebreak
+% \section{Custom Colcon meta settings}
+% \label{sec:colconsettings}
+% \inputminted[linenos]{yaml}{./src/custom_r5f_colcon.meta}
 
-#include "microros.h"
+% % ------------------------------------------------------------------------------
+% \pagebreak
+% \section{Firmware time functions}
+% \label{sec:timefunctions}
 
-extern int absoluteUsedMemory;
-extern int usedMemory;
+% \subsection{Main function}
+% \inputminted[linenos]{c}{./src/clock.c}
+
+% \subsection{Header file with definitions}
+% \begin{minted}[linenos]{c}
+%   /**< Microseconds per second. */
+%   #define MICROSECONDS_PER_SECOND    ( 1000000LL )  
+%   /**< Nanoseconds per second. */
+%   #define NANOSECONDS_PER_SECOND     ( 1000000000LL ) 
+%   /**< Nanoseconds per FreeRTOS tick. */  
+%   #define NANOSECONDS_PER_TICK       ( NANOSECONDS_PER_SECOND / configTICK_RATE_HZ ) 
+% \end{minted}
 
 
-void * __freertos_allocate(size_t size, void * state);
-void __freertos_deallocate(void * pointer, void * state);
-void * __freertos_reallocate(void * pointer, size_t size, void * state);
-void * __freertos_zero_allocate(size_t number_of_elements,
-size_t size_of_element, void * state);
+% % ------------------------------------------------------------------------------
+% \pagebreak
+% \section{Firmware memory allocation functions}
+% \label{sec:allocfunctions}
 
-#endif // _ALLOCATORS_H_
-\end{minted}
+% \subsection{Main function}
+% \inputminted[linenos]{c}{./src/allocators.c}
+
+% \subsection{Header file with definitions}
+% \begin{minted}[linenos]{c}
+% #ifndef _ALLOCATORS_H_
+% #define _ALLOCATORS_H_
+
+% #include "microros.h"
+
+% extern int absoluteUsedMemory;
+% extern int usedMemory;
+
+
+% void * __freertos_allocate(size_t size, void * state);
+% void __freertos_deallocate(void * pointer, void * state);
+% void * __freertos_reallocate(void * pointer, size_t size, void * state);
+% void * __freertos_zero_allocate(size_t number_of_elements,
+% size_t size_of_element, void * state);
+
+% #endif // _ALLOCATORS_H_
+% \end{minted}
 
 
 \end{document}
